tests/compile-fail/nonconstant-constant.to
fn runtime(): Int {
    1
}

const Invalid: Int = runtime()
